--- a/src/components/LeftNav/LeftNav.module.scss
+++ b/src/components/LeftNav/LeftNav.module.scss
@@ -11,7 +11,6 @@
   width: 230px;
   position: sticky;
   align-self: flex-start;
-  margin-top: 26px;
   top: 210px;
   scroll-margin: 200px;
 
