--- a/src/components/Office/CustomerContactInfoForm/CustomerContactInfoForm.module.scss
+++ b/src/components/Office/CustomerContactInfoForm/CustomerContactInfoForm.module.scss
@@ -2,6 +2,11 @@
 @import 'shared/styles/_mixins';
 @import 'shared/styles/colors';
 
+
+.gridContainer {
+  margin-top: 2rem;
+}
+
 .customerContactForm {
   display: flex;
   flex-direction: column;
