--- a/src/pages/Office/ServicesCounselingMoveInfo/ServicesCounselingTab.module.scss
+++ b/src/pages/Office/ServicesCounselingMoveInfo/ServicesCounselingTab.module.scss
@@ -41,6 +41,10 @@
   margin-left: auto;
   margin-right: auto;
 
+  .leftNav {
+    margin-top: 2rem;
+  }
+
   .gridContainer {
     flex-grow: 1;
   }
